fixed text overflowing

--- a/app/assets/stylesheets/messages/message.scss
+++ b/app/assets/stylesheets/messages/message.scss
@@ -32,6 +32,7 @@
     flex-direction: column-reverse;
     position: absolute;
     bottom: 67px;
+    top: 55px;
     left: 0;
     width: 100%;
     height: 87%;
@@ -143,6 +144,7 @@
     .members-ul {
         padding-left: 15px;
         padding-top: 5px;
+        
 
         li {
             display: flex;
